Profile images added
Co-Authored-By: meglodx <75421299+meglodx@users.noreply.github.com>
Co-Authored-By: jopsefin <71291802+jopsefin@users.noreply.github.com>
Co-Authored-By: hannalonns <76208590+hannalonns@users.noreply.github.com>
Co-Authored-By: EdvinOwetz <76057126+EdvinOwetz@users.noreply.github.com>

--- a/styles/components/profile.css
+++ b/styles/components/profile.css
@@ -1,15 +1,20 @@
-.profile__background {
-    background-image: url(../../img/nature-snow-winter-view-animal-cute-1361003-pxhere.com.jpg);
-    background-position: 45% 35%;
+.profile__images {
+    /*background-image: url("../../img/webp/backgroundXS.webp");
+    background-position: 50% 50%;*/
     width: 100%;
     min-height: 200px;
     max-height: 400px;
     position: relative;
     border-radius: 5px;
     margin-bottom: 5px;
+    overflow: hidden;
 }
 
-.profile__img {
+.profile__background>img {
+    /*width: 100%;*/
+}
+
+.profile__portrait {
     border-radius: 15px 50px;
     position: absolute;
     left: 20px;
