--- a/styles/components/profile.css
+++ b/styles/components/profile.css
@@ -1,30 +1,72 @@
-.profile__images {
-    /*background-image: url("../../img/webp/backgroundXS.webp");
-    background-position: 50% 50%;*/
-    width: 100%;
-    min-height: 200px;
-    max-height: 400px;
-    position: relative;
-    border-radius: 5px;
-    margin-bottom: 5px;
-    overflow: hidden;
-}
-
+        .profile__images {
+            background-image: url("../../img/webp/background_xs.webp");
+            background-position: 50% 50%;
+            width: 100%;
+            min-height: 200px;
+            max-height: 400px;
+            position: relative;
+            border-radius: 5px;
+            margin-bottom: 5px;
+        }
+        /*
 .profile__background>img {
-    /*width: 100%;*/
+    width: 100%;
 }
-
-.profile__portrait {
-    border-radius: 15px 50px;
-    position: absolute;
-    left: 20px;
-    bottom: 10px;
-    border: 2px solid whitesmoke;
-}
-
-.personal__info ul {
-    list-style-type: none;
-    padding-left: 0px;
-    margin: 5px 0px 0px 0px;
-    text-align: center;
-}
+*/
+        
+        .profile__portrait {
+            border-radius: 15px 50px;
+            position: absolute;
+            left: 20px;
+            bottom: 10px;
+            border: 2px solid whitesmoke;
+            width: 18rem;
+        }
+        
+        .personal__info ul {
+            list-style-type: none;
+            padding-left: 0px;
+            margin: 5px 0px 0px 0px;
+            text-align: center;
+        }
+        
+        @media (min-width: 480px) {
+            .profile__images {
+                background-image: url("../../img/webp/background_sm.webp");
+            }
+        }
+        
+        @media (min-width: 768px) {
+            .profile__images {
+                background-image: url("../../img/webp/background_md.webp");
+            }
+        }
+        
+        @media (min-width: 992px) {
+            .profile__images {
+                background-image: url("../../img/webp/background_lg.webp");
+                /* Large picture TODO */
+            }
+            .profile__portrait {
+                left: 5%;
+                bottom: -50px;
+            }
+        }
+        
+        @media (min-width: 1200px) {
+            .profile__images {
+                background-image: url("../../img/webp/background_xl.webp");
+                /*Xtra Large picture TODO */
+            }
+            .profile__portrait {
+                left: 8%;
+                bottom: -50px;
+            }
+        }
+        
+        @media (min-width: 1600px) {
+            .profile__portrait {
+                left: 20%;
+                bottom: -50px;
+            }
+        }
