--- a/styles/components/progress.css
+++ b/styles/components/progress.css
@@ -7,16 +7,18 @@
     margin: 0.5em 0em 1em 0em;
 }
 
-.knowledge__prog progress[value] {
+.knowledge__prog progress {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
 }
 
-.knowledge__prog progress[value] {
+.knowledge__prog progress {
     width: 200px;
     height: 10px;
 }
+
+
 /* Bakgrundsfärg progress, kolla på sen.*/
 
 .knowledge__prog>progress {
