More tinkering with the page
Co-Authored-By: hannalonns <76208590+hannalonns@users.noreply.github.com>
Co-Authored-By: jopsefin <71291802+jopsefin@users.noreply.github.com>
Co-Authored-By: EdvinOwetz <76057126+EdvinOwetz@users.noreply.github.com>
Co-Authored-By: meglodx <75421299+meglodx@users.noreply.github.com>

--- a/styles/components/presentation.css
+++ b/styles/components/presentation.css
@@ -1,5 +1,18 @@
-.presentation>p {
+.presentation__headline {
+    text-transform: none;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.presentation p {
     padding: 0 0.75em 0 0.75em;
+}
+
+@media (min-width: 480px){
+    .presentation p {
+        max-width: 50rem;
+        margin: auto;
+    }
 }
 
 @media (min-width: 768px) {
