--- a/styles/components/knowledge.css
+++ b/styles/components/knowledge.css
@@ -1,62 +1,77 @@
+.knowledge__headline {
+  text-transform: none;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
 .knowledge__prog,
 .knowledge__prog--secondary {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    margin: 0.5em 0em 1em 0em;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 0.5em 0em 1em 0em;
 }
 
-progress[value] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+/*Progress for Chrome and Mozilla*/
+
+.knowledge__prog progress {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 200px;
+  height: 10px;
+  background-color: var(--clr1LightDesat);
 }
 
-progress[value] {
-    width: 200px;
-    height: 10px;
+.knowledge__prog--secondary progress {
+  background-color: var(--clr1LightDesat);
 }
 
-.knowledge__prog>progress {
-    background-color: var(--clr1LightDesat);
+.knowledge__prog progress::-moz-progress-bar {
+  background-color: var(--clr1DarkDesat);
 }
 
-.knowledge__prog--secondary>progress {
-    background-color: var(--clr1LightDesat);
+.knowledge__prog progress::-webkit-progress-bar {
+  background-color: var(--clr1LightDesat);
 }
 
-progress::-moz-progress-bar {
-    background-color: var(--clr1DarkDesat);
+.knowledge__prog progress::-webkit-progress-value {
+  background-color: var(--clr1DarkDesat);
 }
 
-progress::-webkit-progress-bar {
-    background-color: var(--clr1LightDesat);
+.knowledge__prog label {
+  margin-top: 0.5em;
 }
 
-progress::-webkit-progress-value {
-    background-color: var(--clr1DarkDesat);
-}
-
-label {
-    margin-top: 0.5em;
-}
-
-.knowledge__prog>p {
-    font-weight: 700;
+.knowledge__prog p {
+  font-weight: 700;
 }
 
 @media (min-width: 768px) {
-    .knowledge {
-        flex-wrap: wrap;
-        flex-direction: row;
-        max-width: 60%;
-        align-items: flex-start;
-    }
-    .knowledge h3 {
-        width: 100%;
-    }
-    .knowledge__prog {
-        width: 50%;
-    }
+  .knowledge {
+    flex-wrap: wrap;
+    flex-direction: row;
+    max-width: 60%;
+    align-items: flex-start;
+  }
+
+  .knowledge__headline {
+    width: 100%;
+  }
+
+  .knowledge__prog {
+    width: 50%;
+  }
+
+  .knowledge__prog progress {
+    width: 150px;
+  }
+
+}
+
+@media (min-width: 1200px) {
+    .knowledge__prog progress {
+        width: 200px;
+      }
 }
