--- a/styles/components/personal.css
+++ b/styles/components/personal.css
@@ -1,3 +1,19 @@
-.personal__info h3 {
+.personal__headline {
+    text-transform: none;
     text-align: center;
+}
+
+.personal__headline h2 {
+        margin: 0px;
+}
+
+.personal__headline h3 {
+    margin-bottom: 1rem;
+}
+
+.personal__info ul {
+  list-style-type: none;
+  padding-left: 0px;
+  margin: 5px 0px 0px 0px;
+  text-align: center;
 }
