--- a/styles/components/tables.css
+++ b/styles/components/tables.css
@@ -1,189 +1,156 @@
-/*
-Table things 
-Do not touch the Holy table aka sexy table! Or feel the wrath of the almighty Table Gods.
-
-First rule of Table Club
-1.We do not talk about tables!
-2.We do not talk about tables!
-3.We do not talk about tables!
-*/
-
-
-/*
-*/
-
-.table__caption h3 {
-    text-transform: none;
-    text-align: center;
-    margin: 0px;
-    margin-bottom: 1rem;
+.table__headline {
+  text-transform: none;
+  text-align: center;
+  margin: 0px;
+  margin-bottom: 1rem;
 }
 
 .table__resp {
-    border-collapse: collapse;
-    margin: 0 auto;
-    padding: 0px;
-    border: none;
+  border-collapse: collapse;
+  margin: 0 auto;
+  padding: 0px;
+  border: none;
 }
 
 .table__resp tr,
 .table__resp td,
 .table__mobilevisible {
-    display: block;
+  display: block;
 }
-
 
 /* Mobile Boarders*/
 
 .table__resp tbody tr {
-    border-left: 2px solid var(--clr1DarkDesat);
-    border-right: 2px solid var(--clr1DarkDesat);
+  border-left: 2px solid var(--clr1DarkDesat);
+  border-right: 2px solid var(--clr1DarkDesat);
 }
 
 .table__resp tbody tr:first-child {
-    border-top: 2px solid var(--clr1DarkDesat);
-    border-radius: 10px 10px 0 0;
+  border-top: 2px solid var(--clr1DarkDesat);
+  border-radius: 10px 10px 0 0;
 }
 
 .table__resp tbody tr:last-child {
-    border-bottom: 2px solid var(--clr1DarkDesat);
-    border-radius: 0 0 10px 10px;
+  border-bottom: 2px solid var(--clr1DarkDesat);
+  border-radius: 0 0 10px 10px;
 }
-
 
 /*Hide thead for mobile*/
 
 .table__resp thead {
-    display: none;
+  display: none;
 }
 
 .table__resp tbody tr:nth-child(even) {
-    background-color: var(--clr1Light);
+  background-color: var(--clr1Light);
 }
-
-
-/*Mobile coloring*/
-
-.table__resp td:nth-child(even) {}
-
-.table__resp td:nth-child(odd) {}
-
 
 /* Mobile TD things*/
 
 .table__resp td {
-    padding: var(--box1);
+  padding: var(--box1);
 }
 
 .table__resp td::before {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .table__resp td:nth-child(1)::before {
-    content: "Kurskod: ";
+  content: "Kurskod: ";
 }
 
 .table__resp td:nth-child(2)::before {
-    content: "Kursnamn: ";
+  content: "Kursnamn: ";
 }
 
 .table__resp td:nth-child(3)::before {
-    content: "Period: ";
+  content: "Period: ";
 }
 
 .table__resp td:nth-child(4)::before {
-    content: "Roll: ";
+  content: "Roll: ";
 }
 
 .table__resp td:nth-child(5)::before {
-    content: "SY: ";
+  content: "SY: ";
 }
 
 .table__resp td:nth-child(6)::before {
-    content: "IT: ";
+  content: "IT: ";
 }
 
 .table__resp td:nth-child(7)::before {
-    content: "ID: ";
+  content: "ID: ";
 }
 
 .table__resp td:nth-child(8)::before {
-    content: "GD: ";
+  content: "GD: ";
 }
-
 
 /* Tablets:*/
 
 @media only screen and (min-width: 480px) {
-    /*Resetting display*/
-    .table__resp td {
-        display: table-cell;
-    }
-    .table__resp tr {
-        display: table-row;
-    }
-    .table__resp thead {
-        display: table-header-group;
-    }
-    /*clear before content*/
-    .table__resp td:nth-child(1)::before,
-    .table__resp td:nth-child(2)::before,
-    .table__resp td:nth-child(3)::before,
-    .table__resp td:nth-child(4)::before,
-    .table__resp td:nth-child(5)::before,
-    .table__resp td:nth-child(6)::before,
-    .table__resp td:nth-child(7)::before,
-    .table__resp td:nth-child(8)::before {
-        content: none;
-    }
-    /*Hide mobile only emelement*/
-    .table__resp .table__mobilevisible {
-        display: none;
-    }
-    /*Styleing*/
-    .table__resp td {
-        text-align: center;
-    }
-    .table__resp td:nth-child(2) {
-        text-align: left;
-    }
-    .table__resp tbody tr:nth-child(11) {
-        background-color: var(--clr1Light);
-    }
-    .table__head {
-        background: var(--clr1DarkDesat);
-        border: 2px solid var(--clr1DarkDesat);
-        color: var(--clr1VeryLightDesat);
-    }
-    .table__head th {
-        padding: var(--box1);
-    }
-    /*
-    .table__resp tbody td {
-        border-right: 2px solid var(--clr1DarkDesat);
-    }
-    .table__resp tbody td:nth-last-child() {
-        border-right: none;
-    }
-    */
+  /*Resetting display*/
+  .table__resp td {
+    display: table-cell;
+  }
+  .table__resp tr {
+    display: table-row;
+  }
+  .table__resp thead {
+    display: table-header-group;
+  }
+  /*clear before content*/
+  .table__resp td:nth-child(1)::before,
+  .table__resp td:nth-child(2)::before,
+  .table__resp td:nth-child(3)::before,
+  .table__resp td:nth-child(4)::before,
+  .table__resp td:nth-child(5)::before,
+  .table__resp td:nth-child(6)::before,
+  .table__resp td:nth-child(7)::before,
+  .table__resp td:nth-child(8)::before {
+    content: none;
+  }
+  /*Hide mobile only emelement*/
+  .table__resp .table__mobilevisible {
+    display: none;
+  }
+  /*Styleing*/
+  .table__resp td {
+    text-align: center;
+  }
+  .table__resp td:nth-child(2) {
+    text-align: left;
+  }
+  .table__resp tbody tr:nth-child(11) {
+    background-color: var(--clr1Light);
+  }
+  .table__resp .table__head {
+    background: var(--clr1DarkDesat);
+    border: 2px solid var(--clr1DarkDesat);
+    color: var(--clr1VeryLightDesat);
+  }
+  .table__resp .table__head th {
+    padding: var(--box1);
+  }
 }
-
 
 /*o Laptops:*/
 
-@media only screen and (min-width: 768px) {}
-
+@media only screen and (min-width: 768px) {
+}
 
 /*o Desktops, low resolution:*/
 
-@media only screen and (min-width: 992px) {}
-
+@media only screen and (min-width: 992px) {
+}
 
 /*o Desktops, medium resolution:*/
 
-@media only screen and (min-width: 1200px) {}
-
+@media only screen and (min-width: 1200px) {
+}
 
 /*o Desktops, high resolution:*/
 
-@media only screen and (min-width: 1600px) {}
+@media only screen and (min-width: 1600px) {
+}
