--- a/styles/components/divider.css
+++ b/styles/components/divider.css
@@ -1,6 +1,12 @@
 .divider {
-    color: var(--clr1LightDesat);
-    width: 100%;
-    margin-top: 4rem;
-    margin-bottom: 4rem;
+  color: var(--clr1LightDesat);
+  width: 100%;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+@media (min-width: 768px) {
+  .divider--hide {
+    display: none;
+  }
 }
