--- a/styles/components/presentation.css
+++ b/styles/components/presentation.css
@@ -1,28 +1,29 @@
 .presentation__headline {
-    text-transform: none;
-    text-align: center;
-    margin-bottom: 1rem;
+  text-transform: none;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
-.presentation p {
-    padding: 0 0.75em 0 0.75em;
+.presentation__text {
+  padding: 0 0.75em 0 0.75em;
 }
 
-@media (min-width: 480px){
-    .presentation p {
-        max-width: 50rem;
-        margin: auto;
-    }
+@media (min-width: 480px) {
+  .presentation__text {
+    max-width: 50rem;
+    margin: auto;
+  }
 }
 
 @media (min-width: 768px) {
-    .presentation {
-        display: flex;
-        flex-wrap: wrap;
-        max-width: 40%;
-    }
-    .presentation p {
-        padding-top: 1rem;
-        margin-left: 2rem;
-    }
+  .presentation {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 40%;
+  }
+
+  .presentation__text {
+    padding-top: 1rem;
+    margin-left: 2rem;
+  }
 }
