--- a/styles/components/presentation.css
+++ b/styles/components/presentation.css
@@ -11,14 +11,14 @@
 .presentation__text {
   padding: 0 0.75em 0 0.75em;
 }
-
+/* Tablets:*/
 @media (min-width: 480px) {
   .presentation__text {
     max-width: 50rem;
     margin: auto;
   }
 }
-
+/* Laptops:*/
 @media (min-width: 768px) {
   .presentation {
     display: flex;
